Fix vmsize picker width overflowing

--- a/app/components/pool/action/add/vm-size-picker/vm-size-picker.scss
+++ b/app/components/pool/action/add/vm-size-picker/vm-size-picker.scss
@@ -1,6 +1,7 @@
 @import "app/styles/variables";
 
 bl-vm-size-picker {
+    display: block;
     .vm-size-list {
         height: 400px;
         border: 1px solid $border-color;
